--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                             <p class="fs-8 c-777">Targets Of The Year</p>
                         </div>
                         <div class="year-info">
-                            <div class="box flex blue">
+                            <div class="box flex blue c-column-mobile">
                                 <div class="icon center">
                                     <i class="fa-solid fa-dollar-sign c-blue"></i>
                                 </div>
@@ -129,7 +129,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="box flex orange">
+                            <div class="box flex orange c-column-mobile ">
                                 <div class="icon center orange">
                                     <i class="fa-solid fa-code c-orange"></i>
                                 </div>
@@ -143,7 +143,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="box flex green">
+                            <div class="box flex green c-column-mobile ">
                                 <div class="icon center green">
                                     <i class="fa-solid fa-user c-green"></i>
                                 </div>
@@ -191,7 +191,7 @@
                         <h2 class="short-intro c-column-mobile">Latest News</h2>
                         <div class="boxes ">
                             <div class="box flex br-b c-column-mobile">
-                                <div class="v-center">
+                                <div class="center mb-10">
                                     <img class="br-6 mr-10" src="imgs/news-01.png" alt="">
                                 </div>
                                 <div class="info jc-sb v-center w-100 c-column-mobile">
@@ -205,7 +205,7 @@
                                 </div>
                             </div>
                             <div class="box flex br-b c-column-mobile">
-                                <div class="v-center">
+                                <div class="center mb-10">
                                     <img class="br-6 mr-10" src="imgs/news-02.png" alt="">
                                 </div>
                                 <div class="info jc-sb v-center w-100 c-column-mobile">
@@ -219,7 +219,7 @@
                                 </div>
                             </div>
                             <div class="box flex br-b c-column-mobile">
-                                <div class="v-center">
+                                <div class="center mb-10">
                                     <img class="br-6 mr-10" src="imgs/news-03.png" alt="">
                                 </div>
                                 <div class="info jc-sb v-center w-100 c-column-mobile">
@@ -233,7 +233,7 @@
                                 </div>
                             </div>
                             <div class="box flex c-column-mobile ">
-                                <div class="v-center">
+                                <div class="center mb-10">
                                     <img class="br-6 mr-10" src="imgs/news-04.png" alt="">
                                 </div>
                                 <div class="info jc-sb v-center w-100 c-column-mobile">
